--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "express-handlebars": "^3.0.0",
     "express-session": "^1.15.6",
     "passport": "^0.4.0",
-    "passport-github": "^1.1.0"
+    "passport-github2": "^0.1.11"
   },
   "devDependencies": {},
   "description": ""
