--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "test": "mocha",
-    "start": "node index.js"
+    "start": "nodemon index.js"
   },
   "keywords": [],
   "author": "",
@@ -13,10 +13,7 @@
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
     "express-handlebars": "^3.0.0",
-    "express-session": "^1.15.6",
-    "passport": "^0.4.0",
-    "passport-github2": "^0.1.11",
-    "pg": "^7.6.1"
+    "express-session": "^1.15.6"
   },
   "devDependencies": {
     "eslint": "^5.9.0",
